// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InputRow disabled 1`] = `
<ReactDecorator
  onMount={[Function]}
  onUnMount={[Function]}
  story={
    <Story
      PropTable={[Function]}
      components={
        Object {
          "a": [Function],
          "code": [Function],
          "h1": [Function],
          "h2": [Function],
          "h3": [Function],
          "h4": [Function],
          "h5": [Function],
          "h6": [Function],
          "li": [Function],
          "p": [Function],
          "ul": [Function],
        }
      }
      context={
        Object {
          "hooks": HooksContext {
            "currentContext": [Circular],
            "currentDecoratorName": null,
            "currentEffects": Array [
              Object {
                "create": [Function],
              },
            ],
            "currentHooks": Array [],
            "currentPhase": "NONE",
            "hasUpdates": false,
            "hookListsMap": WeakMap {},
            "mountedDecorators": Set {
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
            },
            "nextHookIndex": 0,
            "prevEffects": Array [],
            "prevMountedDecorators": Set {},
            "renderListener": [Function],
          },
          "id": "inputrow--disabled",
          "kind": "InputRow",
          "name": "disabled",
          "parameters": Object {
            "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
            "framework": "react",
            "options": Object {
              "hierarchyRootSeparator": "|",
              "hierarchySeparator": /\\\\/\\|\\\\\\./,
            },
          },
          "story": "disabled",
        }
      }
      excludedPropTypes={Array []}
      info=""
      maxPropArrayLength={3}
      maxPropObjectKeys={3}
      maxPropStringLength={50}
      maxPropsIntoLine={3}
      propTableCompare={[Function]}
      propTables={Array []}
      propTablesExclude={Array []}
      showHeader={true}
      showInline={false}
      showSource={true}
      styles={[Function]}
    >
      <InputRow
        disabled={true}
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        type="text"
      />
    </Story>
  }
>
  <Story
    PropTable={[Function]}
    components={
      Object {
        "a": [Function],
        "code": [Function],
        "h1": [Function],
        "h2": [Function],
        "h3": [Function],
        "h4": [Function],
        "h5": [Function],
        "h6": [Function],
        "li": [Function],
        "p": [Function],
        "ul": [Function],
      }
    }
    context={
      Object {
        "hooks": HooksContext {
          "currentContext": [Circular],
          "currentDecoratorName": null,
          "currentEffects": Array [
            Object {
              "create": [Function],
            },
          ],
          "currentHooks": Array [],
          "currentPhase": "NONE",
          "hasUpdates": false,
          "hookListsMap": WeakMap {},
          "mountedDecorators": Set {
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          },
          "nextHookIndex": 0,
          "prevEffects": Array [],
          "prevMountedDecorators": Set {},
          "renderListener": [Function],
        },
        "id": "inputrow--disabled",
        "kind": "InputRow",
        "name": "disabled",
        "parameters": Object {
          "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
          "framework": "react",
          "options": Object {
            "hierarchyRootSeparator": "|",
            "hierarchySeparator": /\\\\/\\|\\\\\\./,
          },
        },
        "story": "disabled",
      }
    }
    excludedPropTypes={Array []}
    info=""
    maxPropArrayLength={3}
    maxPropObjectKeys={3}
    maxPropStringLength={50}
    maxPropsIntoLine={3}
    propTableCompare={[Function]}
    propTables={Array []}
    propTablesExclude={Array []}
    showHeader={true}
    showInline={false}
    showSource={true}
    styles={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <InputRow
        disabled={true}
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        type="text"
      >
        <InputRowstyle__Row>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "InputRowstyle__Row-jt7egi-2",
                  "isStatic": true,
                  "lastClassName": "dOntYq",
                  "rules": Array [
                    "margin-bottom:",
                    "40px",
                    ";width:100%;",
                  ],
                },
                "displayName": "InputRowstyle__Row",
                "render": [Function],
                "styledComponentId": "InputRowstyle__Row-jt7egi-2",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="InputRowstyle__Row-jt7egi-2 dOntYq"
            >
              <Input
                disabled={true}
                hasError={false}
                name="Name"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="value"
              >
                <StyledComponent
                  disabled={true}
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Input-lswqho-0",
                        "isStatic": false,
                        "lastClassName": "bewRLi",
                        "rules": Array [
                          "font-family:",
                          "Muli",
                          ";font-size:",
                          "16px",
                          ";font-weight:",
                          "400",
                          ";width:100%;height:60px;background-color:",
                          "#f7f7f7",
                          ";padding:0 ",
                          "24px",
                          ";border-radius:",
                          "4px",
                          ";border:1px solid;border-color:",
                          [Function],
                          ";:hover{border-color:",
                          [Function],
                          ";}:focus{border-color:",
                          [Function],
                          ";}::placeholder{color:",
                          "#979797",
                          ";}",
                        ],
                      },
                      "displayName": "Input",
                      "render": [Function],
                      "styledComponentId": "Input-lswqho-0",
                      "target": "input",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  hasError={false}
                  name="Name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="value"
                >
                  <input
                    className="Input-lswqho-0 bewRLi"
                    disabled={true}
                    name="Name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="value"
                  />
                </StyledComponent>
              </Input>
            </div>
          </StyledComponent>
        </InputRowstyle__Row>
      </InputRow>
    </div>
    <button
      className="info__show-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
  </Story>
</ReactDecorator>
`;

exports[`Storyshots InputRow error 1`] = `
<ReactDecorator
  onMount={[Function]}
  onUnMount={[Function]}
  story={
    <Story
      PropTable={[Function]}
      components={
        Object {
          "a": [Function],
          "code": [Function],
          "h1": [Function],
          "h2": [Function],
          "h3": [Function],
          "h4": [Function],
          "h5": [Function],
          "h6": [Function],
          "li": [Function],
          "p": [Function],
          "ul": [Function],
        }
      }
      context={
        Object {
          "hooks": HooksContext {
            "currentContext": [Circular],
            "currentDecoratorName": null,
            "currentEffects": Array [
              Object {
                "create": [Function],
              },
            ],
            "currentHooks": Array [],
            "currentPhase": "NONE",
            "hasUpdates": false,
            "hookListsMap": WeakMap {},
            "mountedDecorators": Set {
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
            },
            "nextHookIndex": 0,
            "prevEffects": Array [],
            "prevMountedDecorators": Set {},
            "renderListener": [Function],
          },
          "id": "inputrow--error",
          "kind": "InputRow",
          "name": "error",
          "parameters": Object {
            "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
            "framework": "react",
            "options": Object {
              "hierarchyRootSeparator": "|",
              "hierarchySeparator": /\\\\/\\|\\\\\\./,
            },
          },
          "story": "error",
        }
      }
      excludedPropTypes={Array []}
      info=""
      maxPropArrayLength={3}
      maxPropObjectKeys={3}
      maxPropStringLength={50}
      maxPropsIntoLine={3}
      propTableCompare={[Function]}
      propTables={Array []}
      propTablesExclude={Array []}
      showHeader={true}
      showInline={false}
      showSource={true}
      styles={[Function]}
    >
      <InputRow
        error="error message"
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        type="text"
      />
    </Story>
  }
>
  <Story
    PropTable={[Function]}
    components={
      Object {
        "a": [Function],
        "code": [Function],
        "h1": [Function],
        "h2": [Function],
        "h3": [Function],
        "h4": [Function],
        "h5": [Function],
        "h6": [Function],
        "li": [Function],
        "p": [Function],
        "ul": [Function],
      }
    }
    context={
      Object {
        "hooks": HooksContext {
          "currentContext": [Circular],
          "currentDecoratorName": null,
          "currentEffects": Array [
            Object {
              "create": [Function],
            },
          ],
          "currentHooks": Array [],
          "currentPhase": "NONE",
          "hasUpdates": false,
          "hookListsMap": WeakMap {},
          "mountedDecorators": Set {
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          },
          "nextHookIndex": 0,
          "prevEffects": Array [],
          "prevMountedDecorators": Set {},
          "renderListener": [Function],
        },
        "id": "inputrow--error",
        "kind": "InputRow",
        "name": "error",
        "parameters": Object {
          "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
          "framework": "react",
          "options": Object {
            "hierarchyRootSeparator": "|",
            "hierarchySeparator": /\\\\/\\|\\\\\\./,
          },
        },
        "story": "error",
      }
    }
    excludedPropTypes={Array []}
    info=""
    maxPropArrayLength={3}
    maxPropObjectKeys={3}
    maxPropStringLength={50}
    maxPropsIntoLine={3}
    propTableCompare={[Function]}
    propTables={Array []}
    propTablesExclude={Array []}
    showHeader={true}
    showInline={false}
    showSource={true}
    styles={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <InputRow
        error="error message"
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        type="text"
      >
        <InputRowstyle__Row>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "InputRowstyle__Row-jt7egi-2",
                  "isStatic": true,
                  "lastClassName": "dOntYq",
                  "rules": Array [
                    "margin-bottom:",
                    "40px",
                    ";width:100%;",
                  ],
                },
                "displayName": "InputRowstyle__Row",
                "render": [Function],
                "styledComponentId": "InputRowstyle__Row-jt7egi-2",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="InputRowstyle__Row-jt7egi-2 dOntYq"
            >
              <Input
                hasError={true}
                name="Name"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="value"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Input-lswqho-0",
                        "isStatic": false,
                        "lastClassName": "cCTqce",
                        "rules": Array [
                          "font-family:",
                          "Muli",
                          ";font-size:",
                          "16px",
                          ";font-weight:",
                          "400",
                          ";width:100%;height:60px;background-color:",
                          "#f7f7f7",
                          ";padding:0 ",
                          "24px",
                          ";border-radius:",
                          "4px",
                          ";border:1px solid;border-color:",
                          [Function],
                          ";:hover{border-color:",
                          [Function],
                          ";}:focus{border-color:",
                          [Function],
                          ";}::placeholder{color:",
                          "#979797",
                          ";}",
                        ],
                      },
                      "displayName": "Input",
                      "render": [Function],
                      "styledComponentId": "Input-lswqho-0",
                      "target": "input",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  hasError={true}
                  name="Name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="value"
                >
                  <input
                    className="Input-lswqho-0 cCTqce"
                    name="Name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="value"
                  />
                </StyledComponent>
              </Input>
              <InputRowstyle__Error>
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "InputRowstyle__Error-jt7egi-1",
                        "isStatic": true,
                        "lastClassName": "fFLVnQ",
                        "rules": Array [
                          "color:",
                          "#E55E5E",
                          ";font-family:",
                          "Muli",
                          ";font-weight:",
                          "400",
                          ";font-size:",
                          "16px",
                          ";margin-top:",
                          "8px",
                          ";",
                        ],
                      },
                      "displayName": "InputRowstyle__Error",
                      "render": [Function],
                      "styledComponentId": "InputRowstyle__Error-jt7egi-1",
                      "target": "p",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <p
                    className="InputRowstyle__Error-jt7egi-1 fFLVnQ"
                  >
                    error message
                  </p>
                </StyledComponent>
              </InputRowstyle__Error>
            </div>
          </StyledComponent>
        </InputRowstyle__Row>
      </InputRow>
    </div>
    <button
      className="info__show-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
  </Story>
</ReactDecorator>
`;

exports[`Storyshots InputRow field 1`] = `
<ReactDecorator
  onMount={[Function]}
  onUnMount={[Function]}
  story={
    <Story
      PropTable={[Function]}
      components={
        Object {
          "a": [Function],
          "code": [Function],
          "h1": [Function],
          "h2": [Function],
          "h3": [Function],
          "h4": [Function],
          "h5": [Function],
          "h6": [Function],
          "li": [Function],
          "p": [Function],
          "ul": [Function],
        }
      }
      context={
        Object {
          "hooks": HooksContext {
            "currentContext": [Circular],
            "currentDecoratorName": null,
            "currentEffects": Array [
              Object {
                "create": [Function],
              },
            ],
            "currentHooks": Array [],
            "currentPhase": "NONE",
            "hasUpdates": false,
            "hookListsMap": WeakMap {},
            "mountedDecorators": Set {
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
            },
            "nextHookIndex": 0,
            "prevEffects": Array [],
            "prevMountedDecorators": Set {},
            "renderListener": [Function],
          },
          "id": "inputrow--field",
          "kind": "InputRow",
          "name": "field",
          "parameters": Object {
            "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
            "framework": "react",
            "options": Object {
              "hierarchyRootSeparator": "|",
              "hierarchySeparator": /\\\\/\\|\\\\\\./,
            },
          },
          "story": "field",
        }
      }
      excludedPropTypes={Array []}
      info=""
      maxPropArrayLength={3}
      maxPropObjectKeys={3}
      maxPropStringLength={50}
      maxPropsIntoLine={3}
      propTableCompare={[Function]}
      propTables={Array []}
      propTablesExclude={Array []}
      showHeader={true}
      showInline={false}
      showSource={true}
      styles={[Function]}
    >
      <InputRow
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        type="text"
      />
    </Story>
  }
>
  <Story
    PropTable={[Function]}
    components={
      Object {
        "a": [Function],
        "code": [Function],
        "h1": [Function],
        "h2": [Function],
        "h3": [Function],
        "h4": [Function],
        "h5": [Function],
        "h6": [Function],
        "li": [Function],
        "p": [Function],
        "ul": [Function],
      }
    }
    context={
      Object {
        "hooks": HooksContext {
          "currentContext": [Circular],
          "currentDecoratorName": null,
          "currentEffects": Array [
            Object {
              "create": [Function],
            },
          ],
          "currentHooks": Array [],
          "currentPhase": "NONE",
          "hasUpdates": false,
          "hookListsMap": WeakMap {},
          "mountedDecorators": Set {
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          },
          "nextHookIndex": 0,
          "prevEffects": Array [],
          "prevMountedDecorators": Set {},
          "renderListener": [Function],
        },
        "id": "inputrow--field",
        "kind": "InputRow",
        "name": "field",
        "parameters": Object {
          "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
          "framework": "react",
          "options": Object {
            "hierarchyRootSeparator": "|",
            "hierarchySeparator": /\\\\/\\|\\\\\\./,
          },
        },
        "story": "field",
      }
    }
    excludedPropTypes={Array []}
    info=""
    maxPropArrayLength={3}
    maxPropObjectKeys={3}
    maxPropStringLength={50}
    maxPropsIntoLine={3}
    propTableCompare={[Function]}
    propTables={Array []}
    propTablesExclude={Array []}
    showHeader={true}
    showInline={false}
    showSource={true}
    styles={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <InputRow
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        type="text"
      >
        <InputRowstyle__Row>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "InputRowstyle__Row-jt7egi-2",
                  "isStatic": true,
                  "lastClassName": "dOntYq",
                  "rules": Array [
                    "margin-bottom:",
                    "40px",
                    ";width:100%;",
                  ],
                },
                "displayName": "InputRowstyle__Row",
                "render": [Function],
                "styledComponentId": "InputRowstyle__Row-jt7egi-2",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="InputRowstyle__Row-jt7egi-2 dOntYq"
            >
              <Input
                hasError={false}
                name="Name"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="value"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Input-lswqho-0",
                        "isStatic": false,
                        "lastClassName": "bewRLi",
                        "rules": Array [
                          "font-family:",
                          "Muli",
                          ";font-size:",
                          "16px",
                          ";font-weight:",
                          "400",
                          ";width:100%;height:60px;background-color:",
                          "#f7f7f7",
                          ";padding:0 ",
                          "24px",
                          ";border-radius:",
                          "4px",
                          ";border:1px solid;border-color:",
                          [Function],
                          ";:hover{border-color:",
                          [Function],
                          ";}:focus{border-color:",
                          [Function],
                          ";}::placeholder{color:",
                          "#979797",
                          ";}",
                        ],
                      },
                      "displayName": "Input",
                      "render": [Function],
                      "styledComponentId": "Input-lswqho-0",
                      "target": "input",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  hasError={false}
                  name="Name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="value"
                >
                  <input
                    className="Input-lswqho-0 bewRLi"
                    name="Name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="value"
                  />
                </StyledComponent>
              </Input>
            </div>
          </StyledComponent>
        </InputRowstyle__Row>
      </InputRow>
    </div>
    <button
      className="info__show-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
  </Story>
</ReactDecorator>
`;

exports[`Storyshots InputRow label 1`] = `
<ReactDecorator
  onMount={[Function]}
  onUnMount={[Function]}
  story={
    <Story
      PropTable={[Function]}
      components={
        Object {
          "a": [Function],
          "code": [Function],
          "h1": [Function],
          "h2": [Function],
          "h3": [Function],
          "h4": [Function],
          "h5": [Function],
          "h6": [Function],
          "li": [Function],
          "p": [Function],
          "ul": [Function],
        }
      }
      context={
        Object {
          "hooks": HooksContext {
            "currentContext": [Circular],
            "currentDecoratorName": null,
            "currentEffects": Array [
              Object {
                "create": [Function],
              },
            ],
            "currentHooks": Array [],
            "currentPhase": "NONE",
            "hasUpdates": false,
            "hookListsMap": WeakMap {},
            "mountedDecorators": Set {
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
            },
            "nextHookIndex": 0,
            "prevEffects": Array [],
            "prevMountedDecorators": Set {},
            "renderListener": [Function],
          },
          "id": "inputrow--label",
          "kind": "InputRow",
          "name": "label",
          "parameters": Object {
            "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
            "framework": "react",
            "options": Object {
              "hierarchyRootSeparator": "|",
              "hierarchySeparator": /\\\\/\\|\\\\\\./,
            },
          },
          "story": "label",
        }
      }
      excludedPropTypes={Array []}
      info=""
      maxPropArrayLength={3}
      maxPropObjectKeys={3}
      maxPropStringLength={50}
      maxPropsIntoLine={3}
      propTableCompare={[Function]}
      propTables={Array []}
      propTablesExclude={Array []}
      showHeader={true}
      showInline={false}
      showSource={true}
      styles={[Function]}
    >
      <InputRow
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        label="Label"
        type="text"
      />
    </Story>
  }
>
  <Story
    PropTable={[Function]}
    components={
      Object {
        "a": [Function],
        "code": [Function],
        "h1": [Function],
        "h2": [Function],
        "h3": [Function],
        "h4": [Function],
        "h5": [Function],
        "h6": [Function],
        "li": [Function],
        "p": [Function],
        "ul": [Function],
      }
    }
    context={
      Object {
        "hooks": HooksContext {
          "currentContext": [Circular],
          "currentDecoratorName": null,
          "currentEffects": Array [
            Object {
              "create": [Function],
            },
          ],
          "currentHooks": Array [],
          "currentPhase": "NONE",
          "hasUpdates": false,
          "hookListsMap": WeakMap {},
          "mountedDecorators": Set {
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          },
          "nextHookIndex": 0,
          "prevEffects": Array [],
          "prevMountedDecorators": Set {},
          "renderListener": [Function],
        },
        "id": "inputrow--label",
        "kind": "InputRow",
        "name": "label",
        "parameters": Object {
          "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
          "framework": "react",
          "options": Object {
            "hierarchyRootSeparator": "|",
            "hierarchySeparator": /\\\\/\\|\\\\\\./,
          },
        },
        "story": "label",
      }
    }
    excludedPropTypes={Array []}
    info=""
    maxPropArrayLength={3}
    maxPropObjectKeys={3}
    maxPropStringLength={50}
    maxPropsIntoLine={3}
    propTableCompare={[Function]}
    propTables={Array []}
    propTablesExclude={Array []}
    showHeader={true}
    showInline={false}
    showSource={true}
    styles={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <InputRow
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        label="Label"
        type="text"
      >
        <InputRowstyle__Row>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "InputRowstyle__Row-jt7egi-2",
                  "isStatic": true,
                  "lastClassName": "dOntYq",
                  "rules": Array [
                    "margin-bottom:",
                    "40px",
                    ";width:100%;",
                  ],
                },
                "displayName": "InputRowstyle__Row",
                "render": [Function],
                "styledComponentId": "InputRowstyle__Row-jt7egi-2",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="InputRowstyle__Row-jt7egi-2 dOntYq"
            >
              <InputRowstyle__Label>
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "InputRowstyle__Label-jt7egi-0",
                        "isStatic": true,
                        "lastClassName": "Smnmb",
                        "rules": Array [
                          "display:block;font-family:",
                          "Muli",
                          ";font-weight:",
                          "400",
                          ";font-size:",
                          "16px",
                          ";color:",
                          "#222222",
                          ";margin-bottom:",
                          "8px",
                          ";",
                        ],
                      },
                      "displayName": "InputRowstyle__Label",
                      "render": [Function],
                      "styledComponentId": "InputRowstyle__Label-jt7egi-0",
                      "target": "label",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <label
                    className="InputRowstyle__Label-jt7egi-0 Smnmb"
                  >
                    Label
                  </label>
                </StyledComponent>
              </InputRowstyle__Label>
              <Input
                hasError={false}
                name="Name"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="value"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Input-lswqho-0",
                        "isStatic": false,
                        "lastClassName": "bewRLi",
                        "rules": Array [
                          "font-family:",
                          "Muli",
                          ";font-size:",
                          "16px",
                          ";font-weight:",
                          "400",
                          ";width:100%;height:60px;background-color:",
                          "#f7f7f7",
                          ";padding:0 ",
                          "24px",
                          ";border-radius:",
                          "4px",
                          ";border:1px solid;border-color:",
                          [Function],
                          ";:hover{border-color:",
                          [Function],
                          ";}:focus{border-color:",
                          [Function],
                          ";}::placeholder{color:",
                          "#979797",
                          ";}",
                        ],
                      },
                      "displayName": "Input",
                      "render": [Function],
                      "styledComponentId": "Input-lswqho-0",
                      "target": "input",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  hasError={false}
                  name="Name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="value"
                >
                  <input
                    className="Input-lswqho-0 bewRLi"
                    name="Name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="value"
                  />
                </StyledComponent>
              </Input>
            </div>
          </StyledComponent>
        </InputRowstyle__Row>
      </InputRow>
    </div>
    <button
      className="info__show-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
  </Story>
</ReactDecorator>
`;

exports[`Storyshots InputRow placeholder 1`] = `
<ReactDecorator
  onMount={[Function]}
  onUnMount={[Function]}
  story={
    <Story
      PropTable={[Function]}
      components={
        Object {
          "a": [Function],
          "code": [Function],
          "h1": [Function],
          "h2": [Function],
          "h3": [Function],
          "h4": [Function],
          "h5": [Function],
          "h6": [Function],
          "li": [Function],
          "p": [Function],
          "ul": [Function],
        }
      }
      context={
        Object {
          "hooks": HooksContext {
            "currentContext": [Circular],
            "currentDecoratorName": null,
            "currentEffects": Array [
              Object {
                "create": [Function],
              },
            ],
            "currentHooks": Array [],
            "currentPhase": "NONE",
            "hasUpdates": false,
            "hookListsMap": WeakMap {},
            "mountedDecorators": Set {
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
            },
            "nextHookIndex": 0,
            "prevEffects": Array [],
            "prevMountedDecorators": Set {},
            "renderListener": [Function],
          },
          "id": "inputrow--placeholder",
          "kind": "InputRow",
          "name": "placeholder",
          "parameters": Object {
            "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
            "framework": "react",
            "options": Object {
              "hierarchyRootSeparator": "|",
              "hierarchySeparator": /\\\\/\\|\\\\\\./,
            },
          },
          "story": "placeholder",
        }
      }
      excludedPropTypes={Array []}
      info=""
      maxPropArrayLength={3}
      maxPropObjectKeys={3}
      maxPropStringLength={50}
      maxPropsIntoLine={3}
      propTableCompare={[Function]}
      propTables={Array []}
      propTablesExclude={Array []}
      showHeader={true}
      showInline={false}
      showSource={true}
      styles={[Function]}
    >
      <InputRow
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "",
          }
        }
        placeholder="placeholder here"
        type="text"
      />
    </Story>
  }
>
  <Story
    PropTable={[Function]}
    components={
      Object {
        "a": [Function],
        "code": [Function],
        "h1": [Function],
        "h2": [Function],
        "h3": [Function],
        "h4": [Function],
        "h5": [Function],
        "h6": [Function],
        "li": [Function],
        "p": [Function],
        "ul": [Function],
      }
    }
    context={
      Object {
        "hooks": HooksContext {
          "currentContext": [Circular],
          "currentDecoratorName": null,
          "currentEffects": Array [
            Object {
              "create": [Function],
            },
          ],
          "currentHooks": Array [],
          "currentPhase": "NONE",
          "hasUpdates": false,
          "hookListsMap": WeakMap {},
          "mountedDecorators": Set {
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          },
          "nextHookIndex": 0,
          "prevEffects": Array [],
          "prevMountedDecorators": Set {},
          "renderListener": [Function],
        },
        "id": "inputrow--placeholder",
        "kind": "InputRow",
        "name": "placeholder",
        "parameters": Object {
          "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
          "framework": "react",
          "options": Object {
            "hierarchyRootSeparator": "|",
            "hierarchySeparator": /\\\\/\\|\\\\\\./,
          },
        },
        "story": "placeholder",
      }
    }
    excludedPropTypes={Array []}
    info=""
    maxPropArrayLength={3}
    maxPropObjectKeys={3}
    maxPropStringLength={50}
    maxPropsIntoLine={3}
    propTableCompare={[Function]}
    propTables={Array []}
    propTablesExclude={Array []}
    showHeader={true}
    showInline={false}
    showSource={true}
    styles={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <InputRow
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "",
          }
        }
        placeholder="placeholder here"
        type="text"
      >
        <InputRowstyle__Row>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "InputRowstyle__Row-jt7egi-2",
                  "isStatic": true,
                  "lastClassName": "dOntYq",
                  "rules": Array [
                    "margin-bottom:",
                    "40px",
                    ";width:100%;",
                  ],
                },
                "displayName": "InputRowstyle__Row",
                "render": [Function],
                "styledComponentId": "InputRowstyle__Row-jt7egi-2",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="InputRowstyle__Row-jt7egi-2 dOntYq"
            >
              <Input
                hasError={false}
                name="Name"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="placeholder here"
                type="text"
                value=""
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Input-lswqho-0",
                        "isStatic": false,
                        "lastClassName": "bewRLi",
                        "rules": Array [
                          "font-family:",
                          "Muli",
                          ";font-size:",
                          "16px",
                          ";font-weight:",
                          "400",
                          ";width:100%;height:60px;background-color:",
                          "#f7f7f7",
                          ";padding:0 ",
                          "24px",
                          ";border-radius:",
                          "4px",
                          ";border:1px solid;border-color:",
                          [Function],
                          ";:hover{border-color:",
                          [Function],
                          ";}:focus{border-color:",
                          [Function],
                          ";}::placeholder{color:",
                          "#979797",
                          ";}",
                        ],
                      },
                      "displayName": "Input",
                      "render": [Function],
                      "styledComponentId": "Input-lswqho-0",
                      "target": "input",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  hasError={false}
                  name="Name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="placeholder here"
                  type="text"
                  value=""
                >
                  <input
                    className="Input-lswqho-0 bewRLi"
                    name="Name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="placeholder here"
                    type="text"
                    value=""
                  />
                </StyledComponent>
              </Input>
            </div>
          </StyledComponent>
        </InputRowstyle__Row>
      </InputRow>
    </div>
    <button
      className="info__show-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
  </Story>
</ReactDecorator>
`;

exports[`Storyshots InputRow playground 1`] = `
<ReactDecorator
  onMount={[Function]}
  onUnMount={[Function]}
  story={
    <Story
      PropTable={[Function]}
      components={
        Object {
          "a": [Function],
          "code": [Function],
          "h1": [Function],
          "h2": [Function],
          "h3": [Function],
          "h4": [Function],
          "h5": [Function],
          "h6": [Function],
          "li": [Function],
          "p": [Function],
          "ul": [Function],
        }
      }
      context={
        Object {
          "hooks": HooksContext {
            "currentContext": [Circular],
            "currentDecoratorName": null,
            "currentEffects": Array [
              Object {
                "create": [Function],
              },
            ],
            "currentHooks": Array [],
            "currentPhase": "NONE",
            "hasUpdates": false,
            "hookListsMap": WeakMap {},
            "mountedDecorators": Set {
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
            },
            "nextHookIndex": 0,
            "prevEffects": Array [],
            "prevMountedDecorators": Set {},
            "renderListener": [Function],
          },
          "id": "inputrow--playground",
          "kind": "InputRow",
          "name": "playground",
          "parameters": Object {
            "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
            "framework": "react",
            "options": Object {
              "hierarchyRootSeparator": "|",
              "hierarchySeparator": /\\\\/\\|\\\\\\./,
            },
          },
          "story": "playground",
        }
      }
      excludedPropTypes={Array []}
      info=""
      maxPropArrayLength={3}
      maxPropObjectKeys={3}
      maxPropStringLength={50}
      maxPropsIntoLine={3}
      propTableCompare={[Function]}
      propTables={Array []}
      propTablesExclude={Array []}
      showHeader={true}
      showInline={false}
      showSource={true}
      styles={[Function]}
    >
      <InputRow
        disabled={true}
        error="error"
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        label="example"
        placeholder="placeholder here"
        type="text"
      />
    </Story>
  }
>
  <Story
    PropTable={[Function]}
    components={
      Object {
        "a": [Function],
        "code": [Function],
        "h1": [Function],
        "h2": [Function],
        "h3": [Function],
        "h4": [Function],
        "h5": [Function],
        "h6": [Function],
        "li": [Function],
        "p": [Function],
        "ul": [Function],
      }
    }
    context={
      Object {
        "hooks": HooksContext {
          "currentContext": [Circular],
          "currentDecoratorName": null,
          "currentEffects": Array [
            Object {
              "create": [Function],
            },
          ],
          "currentHooks": Array [],
          "currentPhase": "NONE",
          "hasUpdates": false,
          "hookListsMap": WeakMap {},
          "mountedDecorators": Set {
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          },
          "nextHookIndex": 0,
          "prevEffects": Array [],
          "prevMountedDecorators": Set {},
          "renderListener": [Function],
        },
        "id": "inputrow--playground",
        "kind": "InputRow",
        "name": "playground",
        "parameters": Object {
          "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
          "framework": "react",
          "options": Object {
            "hierarchyRootSeparator": "|",
            "hierarchySeparator": /\\\\/\\|\\\\\\./,
          },
        },
        "story": "playground",
      }
    }
    excludedPropTypes={Array []}
    info=""
    maxPropArrayLength={3}
    maxPropObjectKeys={3}
    maxPropStringLength={50}
    maxPropsIntoLine={3}
    propTableCompare={[Function]}
    propTables={Array []}
    propTablesExclude={Array []}
    showHeader={true}
    showInline={false}
    showSource={true}
    styles={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <InputRow
        disabled={true}
        error="error"
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        label="example"
        placeholder="placeholder here"
        type="text"
      >
        <InputRowstyle__Row>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "InputRowstyle__Row-jt7egi-2",
                  "isStatic": true,
                  "lastClassName": "dOntYq",
                  "rules": Array [
                    "margin-bottom:",
                    "40px",
                    ";width:100%;",
                  ],
                },
                "displayName": "InputRowstyle__Row",
                "render": [Function],
                "styledComponentId": "InputRowstyle__Row-jt7egi-2",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="InputRowstyle__Row-jt7egi-2 dOntYq"
            >
              <InputRowstyle__Label>
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "InputRowstyle__Label-jt7egi-0",
                        "isStatic": true,
                        "lastClassName": "Smnmb",
                        "rules": Array [
                          "display:block;font-family:",
                          "Muli",
                          ";font-weight:",
                          "400",
                          ";font-size:",
                          "16px",
                          ";color:",
                          "#222222",
                          ";margin-bottom:",
                          "8px",
                          ";",
                        ],
                      },
                      "displayName": "InputRowstyle__Label",
                      "render": [Function],
                      "styledComponentId": "InputRowstyle__Label-jt7egi-0",
                      "target": "label",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <label
                    className="InputRowstyle__Label-jt7egi-0 Smnmb"
                  >
                    example
                  </label>
                </StyledComponent>
              </InputRowstyle__Label>
              <Input
                disabled={true}
                hasError={true}
                name="Name"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="placeholder here"
                type="text"
                value="value"
              >
                <StyledComponent
                  disabled={true}
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Input-lswqho-0",
                        "isStatic": false,
                        "lastClassName": "cCTqce",
                        "rules": Array [
                          "font-family:",
                          "Muli",
                          ";font-size:",
                          "16px",
                          ";font-weight:",
                          "400",
                          ";width:100%;height:60px;background-color:",
                          "#f7f7f7",
                          ";padding:0 ",
                          "24px",
                          ";border-radius:",
                          "4px",
                          ";border:1px solid;border-color:",
                          [Function],
                          ";:hover{border-color:",
                          [Function],
                          ";}:focus{border-color:",
                          [Function],
                          ";}::placeholder{color:",
                          "#979797",
                          ";}",
                        ],
                      },
                      "displayName": "Input",
                      "render": [Function],
                      "styledComponentId": "Input-lswqho-0",
                      "target": "input",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  hasError={true}
                  name="Name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="placeholder here"
                  type="text"
                  value="value"
                >
                  <input
                    className="Input-lswqho-0 cCTqce"
                    disabled={true}
                    name="Name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="placeholder here"
                    type="text"
                    value="value"
                  />
                </StyledComponent>
              </Input>
              <InputRowstyle__Error>
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "InputRowstyle__Error-jt7egi-1",
                        "isStatic": true,
                        "lastClassName": "fFLVnQ",
                        "rules": Array [
                          "color:",
                          "#E55E5E",
                          ";font-family:",
                          "Muli",
                          ";font-weight:",
                          "400",
                          ";font-size:",
                          "16px",
                          ";margin-top:",
                          "8px",
                          ";",
                        ],
                      },
                      "displayName": "InputRowstyle__Error",
                      "render": [Function],
                      "styledComponentId": "InputRowstyle__Error-jt7egi-1",
                      "target": "p",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <p
                    className="InputRowstyle__Error-jt7egi-1 fFLVnQ"
                  >
                    error
                  </p>
                </StyledComponent>
              </InputRowstyle__Error>
            </div>
          </StyledComponent>
        </InputRowstyle__Row>
      </InputRow>
    </div>
    <button
      className="info__show-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
  </Story>
</ReactDecorator>
`;

exports[`Storyshots InputRow type 1`] = `
<ReactDecorator
  onMount={[Function]}
  onUnMount={[Function]}
  story={
    <Story
      PropTable={[Function]}
      components={
        Object {
          "a": [Function],
          "code": [Function],
          "h1": [Function],
          "h2": [Function],
          "h3": [Function],
          "h4": [Function],
          "h5": [Function],
          "h6": [Function],
          "li": [Function],
          "p": [Function],
          "ul": [Function],
        }
      }
      context={
        Object {
          "hooks": HooksContext {
            "currentContext": [Circular],
            "currentDecoratorName": null,
            "currentEffects": Array [
              Object {
                "create": [Function],
              },
            ],
            "currentHooks": Array [],
            "currentPhase": "NONE",
            "hasUpdates": false,
            "hookListsMap": WeakMap {},
            "mountedDecorators": Set {
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
            },
            "nextHookIndex": 0,
            "prevEffects": Array [],
            "prevMountedDecorators": Set {},
            "renderListener": [Function],
          },
          "id": "inputrow--type",
          "kind": "InputRow",
          "name": "type",
          "parameters": Object {
            "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
            "framework": "react",
            "options": Object {
              "hierarchyRootSeparator": "|",
              "hierarchySeparator": /\\\\/\\|\\\\\\./,
            },
          },
          "story": "type",
        }
      }
      excludedPropTypes={Array []}
      info=""
      maxPropArrayLength={3}
      maxPropObjectKeys={3}
      maxPropStringLength={50}
      maxPropsIntoLine={3}
      propTableCompare={[Function]}
      propTables={Array []}
      propTablesExclude={Array []}
      showHeader={true}
      showInline={false}
      showSource={true}
      styles={[Function]}
    >
      <React.Fragment>
        <div>
          type = text
        </div>
        <InputRow
          field={
            Object {
              "name": "Name",
              "onBlur": [Function],
              "onChange": [Function],
              "value": "value",
            }
          }
          type="text"
        />
        <div>
          type = password
        </div>
        <InputRow
          field={
            Object {
              "name": "Name",
              "onBlur": [Function],
              "onChange": [Function],
              "value": "value",
            }
          }
          type="password"
        />
      </React.Fragment>
    </Story>
  }
>
  <Story
    PropTable={[Function]}
    components={
      Object {
        "a": [Function],
        "code": [Function],
        "h1": [Function],
        "h2": [Function],
        "h3": [Function],
        "h4": [Function],
        "h5": [Function],
        "h6": [Function],
        "li": [Function],
        "p": [Function],
        "ul": [Function],
      }
    }
    context={
      Object {
        "hooks": HooksContext {
          "currentContext": [Circular],
          "currentDecoratorName": null,
          "currentEffects": Array [
            Object {
              "create": [Function],
            },
          ],
          "currentHooks": Array [],
          "currentPhase": "NONE",
          "hasUpdates": false,
          "hookListsMap": WeakMap {},
          "mountedDecorators": Set {
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          },
          "nextHookIndex": 0,
          "prevEffects": Array [],
          "prevMountedDecorators": Set {},
          "renderListener": [Function],
        },
        "id": "inputrow--type",
        "kind": "InputRow",
        "name": "type",
        "parameters": Object {
          "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/InputRow/InputRow.stories.tsx",
          "framework": "react",
          "options": Object {
            "hierarchyRootSeparator": "|",
            "hierarchySeparator": /\\\\/\\|\\\\\\./,
          },
        },
        "story": "type",
      }
    }
    excludedPropTypes={Array []}
    info=""
    maxPropArrayLength={3}
    maxPropObjectKeys={3}
    maxPropStringLength={50}
    maxPropsIntoLine={3}
    propTableCompare={[Function]}
    propTables={Array []}
    propTablesExclude={Array []}
    showHeader={true}
    showInline={false}
    showSource={true}
    styles={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div>
        type = text
      </div>
      <InputRow
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        type="text"
      >
        <InputRowstyle__Row>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "InputRowstyle__Row-jt7egi-2",
                  "isStatic": true,
                  "lastClassName": "dOntYq",
                  "rules": Array [
                    "margin-bottom:",
                    "40px",
                    ";width:100%;",
                  ],
                },
                "displayName": "InputRowstyle__Row",
                "render": [Function],
                "styledComponentId": "InputRowstyle__Row-jt7egi-2",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="InputRowstyle__Row-jt7egi-2 dOntYq"
            >
              <Input
                hasError={false}
                name="Name"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="value"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Input-lswqho-0",
                        "isStatic": false,
                        "lastClassName": "bewRLi",
                        "rules": Array [
                          "font-family:",
                          "Muli",
                          ";font-size:",
                          "16px",
                          ";font-weight:",
                          "400",
                          ";width:100%;height:60px;background-color:",
                          "#f7f7f7",
                          ";padding:0 ",
                          "24px",
                          ";border-radius:",
                          "4px",
                          ";border:1px solid;border-color:",
                          [Function],
                          ";:hover{border-color:",
                          [Function],
                          ";}:focus{border-color:",
                          [Function],
                          ";}::placeholder{color:",
                          "#979797",
                          ";}",
                        ],
                      },
                      "displayName": "Input",
                      "render": [Function],
                      "styledComponentId": "Input-lswqho-0",
                      "target": "input",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  hasError={false}
                  name="Name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="value"
                >
                  <input
                    className="Input-lswqho-0 bewRLi"
                    name="Name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="value"
                  />
                </StyledComponent>
              </Input>
            </div>
          </StyledComponent>
        </InputRowstyle__Row>
      </InputRow>
      <div>
        type = password
      </div>
      <InputRow
        field={
          Object {
            "name": "Name",
            "onBlur": [Function],
            "onChange": [Function],
            "value": "value",
          }
        }
        type="password"
      >
        <InputRowstyle__Row>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "InputRowstyle__Row-jt7egi-2",
                  "isStatic": true,
                  "lastClassName": "dOntYq",
                  "rules": Array [
                    "margin-bottom:",
                    "40px",
                    ";width:100%;",
                  ],
                },
                "displayName": "InputRowstyle__Row",
                "render": [Function],
                "styledComponentId": "InputRowstyle__Row-jt7egi-2",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="InputRowstyle__Row-jt7egi-2 dOntYq"
            >
              <Input
                hasError={false}
                name="Name"
                onBlur={[Function]}
                onChange={[Function]}
                type="password"
                value="value"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Input-lswqho-0",
                        "isStatic": false,
                        "lastClassName": "bewRLi",
                        "rules": Array [
                          "font-family:",
                          "Muli",
                          ";font-size:",
                          "16px",
                          ";font-weight:",
                          "400",
                          ";width:100%;height:60px;background-color:",
                          "#f7f7f7",
                          ";padding:0 ",
                          "24px",
                          ";border-radius:",
                          "4px",
                          ";border:1px solid;border-color:",
                          [Function],
                          ";:hover{border-color:",
                          [Function],
                          ";}:focus{border-color:",
                          [Function],
                          ";}::placeholder{color:",
                          "#979797",
                          ";}",
                        ],
                      },
                      "displayName": "Input",
                      "render": [Function],
                      "styledComponentId": "Input-lswqho-0",
                      "target": "input",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  hasError={false}
                  name="Name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="password"
                  value="value"
                >
                  <input
                    className="Input-lswqho-0 bewRLi"
                    name="Name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="password"
                    value="value"
                  />
                </StyledComponent>
              </Input>
            </div>
          </StyledComponent>
        </InputRowstyle__Row>
      </InputRow>
    </div>
    <button
      className="info__show-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
  </Story>
</ReactDecorator>
`;
